--- a/Web_Lab_3/src/main/resources/db.properties
+++ b/Web_Lab_3/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-db.url=jdbc:hsqldb:file:./data/lab3db;shutdown=true
+db.url=jdbc:hsqldb:file:./data/lab3db
 db.user=
 db.pass.b64=
 #введите свои значения
